fixed logo not showing up, adjusted padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,7 +146,9 @@ h6,
     }
 
     .navbar-light .navbar-brand img {
-        max-height: 45px;
+        content: url('../img/logo_blue.png');
+        width: 50px;
+        height: 50px;
     }
 }
 
